bug #3512916 [display] Right frame reloads after displaying SQL result(zero rows)
Conflicts:

	ChangeLog

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@ phpMyAdmin - ChangeLog
 3.5.1.0 (not yet released)
 - bug #3510784 [edit] Limit clause ignored when sort order is remembered
 - bug #3511471 [interface] View name not seen in navi panel (MySQL 5.1)
+- bug #3512916 [display] Right frame reloads after displaying SQL result(zero rows)
 - bug [interface] Fixed missing Codemirror for inline query edit when exporting a result set
 
 3.5.0.0 (not yet released)
