--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@ phpMyAdmin - ChangeLog
 3.4.11.0 (not yet released)
 - bug #3486970 [import] Exception on XML import
 - bug #3488777 [navi] $cfg['ShowTooltipAliasTB'] and blank names in navigation
+- bug #3512565 [navi] Fixed missing word "Rows" in table list tooltip after click
 
 3.4.10.2 (2012-03-28)
 - [security] Fixed local path disclosure vulnerability, see PMASA-2012-2
