--- a/test/selenium/README
+++ b/test/selenium/README
@@ -1,8 +1,9 @@
 Guide to run the AllSeleniumTests.php (Yasitha Pandithawatta)
-=====================================
+=============================================================
 
 1. Tested with version 4.0
-2. Configure the testing environment - Browser and the following feilds in phpunit.xml.dist
+2. Configure the testing environment - Browser and add the following fields to
+ phpunit.xml.dist
     <php>
         <const name="TESTSUITE_SERVER" value="localhost"/>
         <const name="TESTSUITE_USER" value="root"/>
@@ -12,8 +13,6 @@ Guide to run the AllSeleniumTests.php (Yasitha Pandithawatta)
         <const name="TESTSUITE_PHPMYADMIN_URL" value="/phpmyadmin-dev" />
     </php>
 3. Start the selenium server
-4. run $ phpunit test/AllSeleniumTests.php
+4. Run $ phpunit test/AllSeleniumTests.php
 
 Note: Only PmaSeleniumLoginTest.php is fixed and added to the test suit.
-
-
