--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,7 @@ phpMyAdmin - ChangeLog
 - bug [interface] Fixed missing Codemirror for inline query edit when exporting a result set
 - bug #3514490 [auth] Multiple Navigation panels bug still present
 - bug #3515181 [users] Error in create user + underscore + create database
+- bug #3515666 [display] Profiling chart shows wrong data
 
 3.5.0.0 (not yet released)
 + rfe #2021981 [interface] Add support for mass prefix change.
