--- a/ChangeLog
+++ b/ChangeLog
@@ -20,6 +20,7 @@ phpMyAdmin - ChangeLog
 + Patch #3507001 Contest-4: Textarea for large character columns
 + Removed the PHP version of the ENUM editor
 + Patch #3507111 Display distinct results, linked to corresponding data rows
++ Update to jQuery 1.7.2
 
 3.5.1.0 (not yet released)
 - bug #3510784 [edit] Limit clause ignored when sort order is remembered
