Fix typo in '...is lower that cookie validity...'

--- a/po/ml.po
+++ b/po/ml.po
@@ -7922,7 +7922,7 @@ msgstr ""
 #: main.php:292
 msgid ""
 "Your PHP parameter [a@http://php.net/manual/en/session.configuration.php#ini."
-"session.gc-maxlifetime@]session.gc_maxlifetime[/a] is lower that cookie "
+"session.gc-maxlifetime@]session.gc_maxlifetime[/a] is lower than cookie "
 "validity configured in phpMyAdmin, because of this, your login will expire "
 "sooner than configured in phpMyAdmin."
 msgstr ""
