--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -4,8 +4,8 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-rc2\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2012-03-29 10:07+0200\n"
-"PO-Revision-Date: 2012-03-15 15:00+0200\n"
-"Last-Translator: Roberto Mathias <betorsm@gmail.com>\n"
+"PO-Revision-Date: 2012-04-02 23:48+0200\n"
+"Last-Translator: Everton R <everton@tconibo.org>\n"
 "Language-Team: brazilian_portuguese <pt_BR@li.org>\n"
 "Language: pt_BR\n"
 "MIME-Version: 1.0\n"
