Fix format string

--- a/po/de.po
+++ b/po/de.po
@@ -12494,7 +12494,7 @@ msgid ""
 msgstr ""
 "Der Cache ist derzeit zu %s%% fragmentiert. 100%% Fragmentierung bedeuten "
 "dass der Abfrage-Cache ein abwechselndes Muster von freien und belegten "
-"Blöcke ist. Dieser Wert sollte unter 20% liegen."
+"Blöcke ist. Dieser Wert sollte unter 20%% liegen."
 
 #: po/advisory_rules.php:95
 msgid "Query cache low memory prunes"
