--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 phpMyAdmin - Readme
 ===================
 
-Version 3.4.11-dev
+Version 3.4.11-rc1
 
 A set of PHP-scripts to manage MySQL over the web.
 
@@ -13,7 +13,7 @@ Copyright
 Copyright (C) 1998-2000
     Tobias Ratschiller <tobias_at_ratschiller.com>
 
-Copyright (C) 2001-2011
+Copyright (C) 2001-2012
     Marc Delisle <marc_at_infomarc.info>
     Olivier Müller <om_at_omnis.ch>
     Robin Johnson <robbat2_at_users.sourceforge.net>
