--- a/ChangeLog
+++ b/ChangeLog
@@ -12,6 +12,7 @@ phpMyAdmin - ChangeLog
 - bug #3516037 [auth] JS includes missing in auth config error page
 - bug #3516183 [display] Missing image extension
 - bug [display] Added missing icons in original theme
+- bug #3516761 [edit] Query error after search
 
 3.5.0.0 (2012-04-07)
 + rfe #2021981 [interface] Add support for mass prefix change.
