--- a/ChangeLog
+++ b/ChangeLog
@@ -26,6 +26,7 @@ phpMyAdmin - ChangeLog
 - bug #3516341 [export] Open Document Text, Word and Texy! Text show table structure twice
 - bug [export] Texy! Text: Columns containing Pipe Character don't export properly
 + [export] Show triggers in Open Document Text, Word and Texy! Text
+- Patch #3415061 [auth] Login screen appears under the page
 
 3.5.1.0 (not yet released)
 - bug #3510784 [edit] Limit clause ignored when sort order is remembered
