--- a/ChangeLog
+++ b/ChangeLog
@@ -28,6 +28,7 @@ phpMyAdmin - ChangeLog
 + [export] Show triggers in Open Document Text, Word and Texy! Text
 - Patch #3415061 [auth] Login screen appears under the page
 + rfe #3517354 [interface] Allow disabling CodeMirror with $cfg['CodemirrorEnable'] = false
++ rfe #3475567 [interface] New directive $cfg['HideStructureActions']
 
 3.5.1.0 (not yet released)
 - bug #3510784 [edit] Limit clause ignored when sort order is remembered
