--- a/po/gl.po
+++ b/po/gl.po
@@ -12689,7 +12689,7 @@ msgstr ""
 #, php-format
 #| msgid "Query cache"
 msgid "Query cache efficiency (%%)"
-msgstr "Eficiencia (%) da caché das consultas"
+msgstr "Eficiencia (%%) da caché das consultas"
 
 #: po/advisory_rules.php:81
 msgid "Query cache not running efficiently, it has a low hit rate."
